--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,11 +97,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
-        app:menu="@menu/navigation_items"
-        app:itemRippleColor="@color/white"
+        android:background="@drawable/nav_background_curved"
         app:itemIconTint="@color/icons_color"
-        app:layout_constraintBottom_toBottomOf="parent" >
+        app:itemRippleColor="#C1C1C1"
+        app:itemTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
