--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -155,9 +155,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
+        android:background="@drawable/nav_background_curved"
+        app:itemTextColor="@color/black"
         app:menu="@menu/navigation_items"
-        app:itemRippleColor="@color/white"
+        app:itemRippleColor="#C1C1C1"
         app:itemIconTint="@color/icons_color"
         app:layout_constraintBottom_toBottomOf="parent" >
 
