- Big update - Added ability to change password with firebase - Added ability to change users name, email, and phone with firebase - Added a new edit profile page ( EditProfileActivity.class ) - Major overhaul on activity_setting_page.xml and class. - Added new font style (sofia_regular) - and other misc changes throughout code everywhere else.

--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -47,7 +47,7 @@
         android:layout_width="415dp"
         android:layout_height="65dp"
         android:background="#FFFFFF"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:text="Payment"
         android:textAlignment="center"
         android:textColor="#000000"
