--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/settingpagebackground"
-    tools:context=".ProfilePageActivity">
+    tools:context=".EditProfileActivity">
 
 
-    <TextView
+    <EditText
         android:id="@+id/profileName"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -19,7 +19,6 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/personalText" />
 
-    <TextView
+    <EditText
         android:id="@+id/profileEmail"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -54,7 +53,6 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileName" />
 
-    <TextView
+    <EditText
         android:id="@+id/profilePhone"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -89,7 +87,6 @@
         android:paddingTop="10dp"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/sofia_regular"
-        android:text="Click to edit this information"
+        android:text="Click to confirm this information"
         android:textColor="#CC000000"
         android:textSize="12dp"
 
@@ -151,11 +148,11 @@
         android:layout_marginEnd="-1dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/sofia_regular"
-        android:text="Profile"
+        android:letterSpacing="0.2"
+        android:text="Edit"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
-        android:letterSpacing="0.2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,42 +165,15 @@
         android:layout_marginEnd="-1dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
-        android:text="Your Personal Information"
+        android:letterSpacing="0.25"
+        android:text="Edit Your Personal Information"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:letterSpacing="0.25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profileTextTop" />
-
-    <TextView
-        android:id="@+id/verifyMsg"
-        android:layout_width="363dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="36dp"
-        android:fontFamily="@font/sofia_regular"
-        android:text="Email Not Verified!"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileTextTop" />
-
-    <Button
-        android:id="@+id/resendCode"
-        android:layout_width="139dp"
-        android:layout_height="47dp"
-        android:text="resendCode"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verifyMsg"
-        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/personalText"
@@ -229,12 +199,48 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
-        android:onClick="settingsPage"
+        android:onClick="profilePage"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/confirmChangesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:letterSpacing="0.25"
+        android:paddingStart="15dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="5dp"
+        android:text="Confirm"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/WhiteBox1"
+        app:layout_constraintStart_toStartOf="@+id/WhiteBox1"
+        app:layout_constraintTop_toTopOf="@+id/WhiteBox1" />
 
+    <TextView
+        android:id="@+id/CancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:letterSpacing="0.25"
+        android:paddingStart="15dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="5dp"
+        android:text="Cancel"
+        android:textColor="#FFFFFF"
+        android:onClick="profilePage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/WhiteBox1" />
 
 
 
@@ -265,44 +271,5 @@
         app:layout_constraintBottom_toBottomOf="parent" >
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
-
-    <TextView
-        android:id="@+id/editInformationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:background="@drawable/profile_page_all_curved_corners_red"
-        android:letterSpacing="0.25"
-        android:paddingStart="15dp"
-        android:paddingLeft="15dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="5dp"
-        android:text="Edit"
-        android:textColor="#FFFFFF"
-        android:onClick="editProfile"
-        app:layout_constraintEnd_toEndOf="@+id/WhiteBox1"
-        app:layout_constraintStart_toStartOf="@+id/WhiteBox1"
-        app:layout_constraintTop_toTopOf="@+id/WhiteBox1" />
-
-    <TextView
-        android:id="@+id/LogOutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
-        android:background="@drawable/profile_page_all_curved_corners_red"
-        android:letterSpacing="0.25"
-        android:paddingStart="15dp"
-        android:paddingLeft="15dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="5dp"
-        android:text="Sign Out"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        android:onClick="logout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/WhiteBox1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
