--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Full Name"
         android:inputType="textPersonName"
         android:padding="10dp"
@@ -47,10 +47,10 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:padding="10dp"
-        android:hint="Email"
         android:textColor="#808080"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +64,7 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Password"
         android:inputType="textPassword"
         android:padding="10dp"
@@ -81,7 +81,7 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:padding="10dp"
@@ -98,7 +98,7 @@
         android:layout_marginEnd="50dp"
         android:background="#CCFFFFFF"
         android:ems="10"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:hint="Phone Number (Optional)"
         android:inputType="phone"
         android:padding="10dp"
@@ -114,11 +114,11 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
+        android:onClick="existingAccountLogin"
         android:text="login to an existing account"
         android:textAlignment="center"
         android:textColor="#E8E0E0"
-        android:onClick="existingAccountLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/aclonica"
+        android:fontFamily="@font/sofia_regular"
         android:text="Make your morning your own"
         android:textColor="#F8F8F8"
         app:layout_constraintEnd_toEndOf="parent"
