--- a/app/src/main/res/layout/activity_rewards.xml
+++ b/app/src/main/res/layout/activity_rewards.xml
@@ -31,6 +31,7 @@
         android:id="@+id/RewardsText"
         android:layout_width="223dp"
         android:layout_height="70dp"
+        android:fontFamily="@font/sofia_regular"
         android:letterSpacing=".1"
         android:text="@string/rewards"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
@@ -58,6 +59,7 @@
         android:id="@+id/earnPointsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/sofia_regular"
         android:letterSpacing=".1"
         android:text="@string/earn_points_for_free_items"
         android:textColor="#292929"
@@ -99,6 +101,7 @@
         android:id="@+id/RewardPointsCollected"
         android:layout_width="206dp"
         android:layout_height="29dp"
+        android:fontFamily="@font/sofia_regular"
         android:text="@string/points_collected"
         android:textColor="#000000"
         android:textSize="16sp"
