- Added more pages to be edited for designs - These same pages have also been laid out with navigation bar and buttons pre built into them    - History Page    - Customer Support Page    - App Settings Page

--- a/app/src/main/res/layout/activity_setting_page.xml
+++ b/app/src/main/res/layout/activity_setting_page.xml
@@ -262,6 +262,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginEnd="16dp"
+        android:onClick="historyPageButton"
         app:layout_constraintBottom_toBottomOf="@+id/top_History_White_Curved_Box"
         app:layout_constraintEnd_toEndOf="@+id/top_History_White_Curved_Box"
         app:layout_constraintTop_toTopOf="@+id/top_History_White_Curved_Box"
@@ -272,6 +273,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginEnd="16dp"
+        android:onClick="paymentPlansPageButton"
         app:layout_constraintBottom_toBottomOf="@+id/top_PaymentPlans_White_Curved_Box2"
         app:layout_constraintEnd_toEndOf="@+id/top_PaymentPlans_White_Curved_Box2"
         app:layout_constraintTop_toTopOf="@+id/top_PaymentPlans_White_Curved_Box2"
