--- a/app/src/main/res/layout/activity_history_page.xml
+++ b/app/src/main/res/layout/activity_history_page.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/screen_shot_2021_11_16_at_9_42_49_pm"
-    tools:context=".CustomerSupportPageActivity">
+    android:background="@drawable/settingpagebackground"
+    tools:context=".HistoryPageActivity">
 
 
     <TextView
-        android:id="@+id/supportTopBox"
+        android:id="@+id/historyTopBox"
         android:layout_width="417dp"
         android:layout_height="96dp"
         android:background="#FFFFFF"
         android:fontFamily="@font/sofia_regular"
-        android:text="Support"
+        android:text="History"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="60sp"
@@ -40,13 +40,13 @@
         android:layout_height="26dp"
         android:background="@drawable/profile_page_top_curved_box"
         android:fontFamily="@font/sofia_regular"
-        android:text="Contact us!"
+        android:text="Your History and Receipts"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/supportTopBox" />
+        app:layout_constraintTop_toBottomOf="@+id/historyTopBox" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -61,5 +61,6 @@
         app:menu="@menu/navigation_items">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
