--- a/app/src/main/res/layout/activity_inbox_page.xml
+++ b/app/src/main/res/layout/activity_inbox_page.xml
@@ -4,6 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InboxPageActivity">
+
+    android:background="@drawable/settingpagebackground"
+    tools:context="com.example.carolina_coffee.InboxPageActivity">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/nav_background_curved"
+        app:itemTextColor="@color/black"
+        app:menu="@menu/navigation_items"
+        app:itemRippleColor="#C1C1C1"
+        app:itemIconTint="@color/icons_color"
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
